complete upto javascript

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>RiR's Clock</title>
 </head>
 <body>
-    
+     <div class="clock">
+        <div class="hour"></div>
+             <div class="hr" id="hr"></div>       
+        </div> 
+        <div class="min"></div>
+             <div class="mm" id="mm"></div>       
+        </div>
+        <div class="sec"></div>
+             <div class="sc" id="sc"></div>       
+        </div>        
+     </div>
 </body>
 </html>
